@startuml
' Use right-angle straight lines for relationships
skinparam linetype ortho
skinparam nodesep 150
skinparam ranksep 150
hide circle
skinparam classAttributeIconSize 0
skinparam classBackgroundColor White
skinparam classBorderColor Black

' Define classes
class FitTrack {
}

class Parser {
    -command : String
    -description : String
    +parse()
}

class Ui {
    +printUser()
}

class User {
    -gender : Gender
    -age : int
    +setGender()
    +setAge()
    +getGender()
    +getAge()
}

' Define relationships with right-angle arrows
FitTrack "1" -> "1" Parser : uses >
FitTrack "1" --> "1" User : creates >

Parser "1" -> "1" Ui : uses >
Parser "1" --> "1" User : manages >

Ui "1" --> "1" User : displays >

@enduml
